fix white background showing behind container grid

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html, body {
+    width: 99%;
+    padding: 0;
+    margin: 0;
+}
+
 ul {
     list-style: none;
     padding: 0;
